--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -27,12 +27,12 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="7dp"
             android:layout_weight="1"
-            android:gravity="right"
+            android:gravity="end"
             android:text="@string/lblTotalAmount"
             android:textSize="24sp" />
 
@@ -40,27 +40,27 @@
             android:id="@+id/txtTotalAmount"
             android:layout_width="119dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
+            android:layout_marginStart="5dp"
             android:layout_marginEnd="45dp"
             android:layout_weight="1"
             android:ems="10"
-            android:gravity="left"
+            android:gravity="center|center_vertical"
             android:importantForAutofill="no"
             android:inputType="number|numberDecimal"
-            android:textSize="24sp" />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="74dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="7dp"
             android:layout_weight="1"
             android:gravity="end"
             android:text="@string/lblTaxAmount"
@@ -70,13 +70,14 @@
             android:id="@+id/txtTaxAmount"
             android:layout_width="119dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
+            android:layout_marginStart="5dp"
             android:layout_marginEnd="45dp"
             android:layout_weight="1"
             android:ems="10"
-            android:gravity="left"
+            android:gravity="center|center_vertical"
+            android:importantForAutofill="no"
             android:inputType="number|numberDecimal"
-            android:textSize="24sp" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
@@ -100,6 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
+                android:checked="true"
                 android:text="@string/rbtnZeroPercent"
                 android:textSize="24sp" />
 
