--- a/app/src/main/res/layout/activity_output.xml
+++ b/app/src/main/res/layout/activity_output.xml
@@ -15,13 +15,14 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="20dp">
 
             <TextView
                 android:id="@+id/lblTotalAmount"
-                android:layout_width="187dp"
+                android:layout_width="250dp"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="2dp"
                 android:gravity="end"
                 android:text="@string/lblTotalAmount"
                 android:textSize="30sp" />
@@ -30,18 +31,19 @@
                 android:id="@+id/txtTotalAmount"
                 android:layout_width="211dp"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:textSize="30sp" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="20dp">
 
             <TextView
                 android:id="@+id/lblTaxAmount"
-                android:layout_width="187dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:text="@string/lblTaxAmount"
@@ -57,12 +59,12 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="20dp">
 
             <TextView
                 android:id="@+id/lblTipPercentage"
-                android:layout_width="187dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:text="@string/lblTipPercentage"
@@ -78,12 +80,12 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="20dp">
 
             <TextView
                 android:id="@+id/lblTipAmount"
-                android:layout_width="187dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:text="@string/lblTipAmount"
@@ -99,12 +101,12 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="20dp">
 
             <TextView
                 android:id="@+id/lblGrandTotal"
-                android:layout_width="187dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:text="@string/lblGrandTotal"
@@ -112,21 +114,25 @@
 
             <TextView
                 android:id="@+id/txtGrandTotal"
-                android:layout_width="211dp"
-                android:layout_height="wrap_content"
+                android:layout_width="163dp"
+                android:layout_height="match_parent"
                 android:textSize="30sp" />
         </TableRow>
     </TableLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnBackToTipCalc_Input"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="105dp"
+            android:layout_marginEnd="105dp"
+            android:gravity="center"
             android:text="@string/btnBackToTipCalc_Input" />
     </LinearLayout>
 
