--- a/app/src/main/res/layout/activity_output.xml
+++ b/app/src/main/res/layout/activity_output.xml
@@ -1,139 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="170dp" />
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="236dp">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp">
-
-            <TextView
-                android:id="@+id/lblTotalAmount"
-                android:layout_width="250dp"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="2dp"
-                android:gravity="end"
-                android:text="@string/lblTotalAmount"
-                android:textSize="30sp" />
-
-            <TextView
-                android:id="@+id/txtTotalAmount"
-                android:layout_width="211dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textSize="30sp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp">
-
-            <TextView
-                android:id="@+id/lblTaxAmount"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:text="@string/lblTaxAmount"
-                android:textSize="30sp" />
-
-            <TextView
-                android:id="@+id/txtTaxAmount"
-                android:layout_width="211dp"
-                android:layout_height="wrap_content"
-                android:textSize="30sp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp">
-
-            <TextView
-                android:id="@+id/lblTipPercentage"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:text="@string/lblTipPercentage"
-                android:textSize="30sp" />
-
-            <TextView
-                android:id="@+id/txtTipPercentage"
-                android:layout_width="211dp"
-                android:layout_height="wrap_content"
-                android:textSize="30sp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp">
-
-            <TextView
-                android:id="@+id/lblTipAmount"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:text="@string/lblTipAmount"
-                android:textSize="30sp" />
-
-            <TextView
-                android:id="@+id/txtTipAmount"
-                android:layout_width="211dp"
-                android:layout_height="wrap_content"
-                android:textSize="30sp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp">
-
-            <TextView
-                android:id="@+id/lblGrandTotal"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:text="@string/lblGrandTotal"
-                android:textSize="30sp" />
-
-            <TextView
-                android:id="@+id/txtGrandTotal"
-                android:layout_width="163dp"
-                android:layout_height="match_parent"
-                android:textSize="30sp" />
-        </TableRow>
-    </TableLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
+        android:fontFamily="sans-serif"
+        android:text="@string/lblTips"
+        android:textSize="100sp"
+        android:gravity="center"
+        android:layout_marginBottom="22dp"
+        android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/btnBackToTipCalc_Input"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="105dp"
-            android:layout_marginEnd="105dp"
-            android:gravity="center"
-            android:text="@string/btnBackToTipCalc_Input" />
-    </LinearLayout>
+            android:layout_marginLeft="22dp"
+            android:layout_marginRight="5dp">
 
-</LinearLayout>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lblTotalAmount"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:gravity="left"
+                    android:text="@string/lblTotalAmount"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/txtTotalAmountView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:fontFamily="sans-serif"
+                    android:gravity="end"
+                    android:inputType="numberDecimal"
+                    android:text="234.55"
+                    android:textSize="30sp" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lblTaxAmount"
+                    android:layout_width="250dp"
+                    android:layout_height="match_parent"
+                    android:fontFamily="sans-serif"
+                    android:gravity="left"
+                    android:text="@string/lblTaxAmount"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/txtTaxAmountView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:fontFamily="sans-serif"
+                    android:gravity="end"
+                    android:inputType="numberDecimal"
+                    android:textSize="30sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lblTipPercentage"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:text="@string/lblTipPercentage"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/txtTipPercentageView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:fontFamily="sans-serif"
+                    android:gravity="end"
+                    android:inputType="numberDecimal"
+                    android:textSize="30sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lblTipAmount"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:gravity="left"
+                    android:text="@string/lblTipAmount"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/txtTipAmountView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:fontFamily="sans-serif"
+                    android:gravity="end"
+                    android:inputType="numberDecimal"
+                    android:textSize="30sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/lblGrandTotal"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:gravity="left"
+                    android:text="@string/lblGrandTotal"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/txtGrandTotalView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:fontFamily="sans-serif"
+                    android:gravity="end"
+                    android:inputType="numberDecimal"
+                    android:textSize="30sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="22dp"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/btnBackToTipCalc_Input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="22dp"
+                    android:layout_span="2"
+                    android:onClick="returnToCalculatorInput"
+                    android:text="@string/btnBackToTipCalc_Input" />
+
+            </TableRow>
+        </TableLayout>
+    </ScrollView>
+
+</androidx.appcompat.widget.LinearLayoutCompat>
